# nghc-rs

./: .gitignore  Cargo.toml  nghc-rs
src/: main.rs  preprocessing.rs
src/optimize/: load.rs  math.rs  mod.rs  optimize.rs  solution.rs  util.rs
test/: rate.sh
